   the encodings are automatically found and included, so this problem should
   be gone forever.
 + Fix building of COM servers (was broken in 1.0 because of the new build
   system).
 + Mimic Python 2.4 behaviour with broken imports: sys.modules is cleaned up
   afterwise. This allows to package SQLObject applications under Windows
   with Python 2.4 and above.
 + Add import hook for GTK.
 + Add import hook for PyOpenGL.
 + Add import hook for dnspython (tested with 1.3.4)
 + Add import hook for KInterbasDB  (courtesy of Eugene Prigorodov)
 + (Windows) Make single-file packages not depend on MSVCRT71.DLL anymore,
   even under Python 2.4. You can eventually ship your programs really as
   single-file executables, even when using the newest Python version!
 + (Linux) Ignore linux-gate.so while calculating dependencies (fix provided
   by Vikram Aggarwal).
 + (Windows) With Python 2.4, setup UPX properly so to be able to compress
   binaries generated with Visual Studio .NET 2003 (such as most of the
   extensions).


PyInstaller 1.0 (with respect to McMillan's Python Installer 5b5):
---------------

 + Add support for Python 2.3 (fix packaging of codecs).
 + Add support for Python 2.4 (under Windows, needed to recompiled the
   bootloader with a different compiler version).
 + Fix support for Python 1.5.2, should be fully functional now (required
   to rewrite some parts of the string module for the bootloader).
 + Fix a rare bug in extracting the dependencies of a DLL (bug in PE header
   parser).
 + Fix packaging of PyQt programs (needed an import hook for a hidden import).
 + Fix imports calculation for modules using the "from __init__ import" syntax.
 + Fix a packaging bug when a module was being import both through binary
   dependency and direct import.

 * Restyle documentation (now using docutils and reStructuredText).
 * New Windows build system for automatic compilations of bootloader in all
   the required flavours (using Scons)