@@ -1,0 +1,3 @@
+#!/usr/bin/env python
+import time
+print time.strptime(time.ctime())
