@@ -1,0 +1,16 @@
+a = Analysis([os.path.join(HOMEPATH,'support\\_mountzlib.py'), os.path.join(HOMEPATH,'support\\useUnicode.py'), 'test9.py'],
+             pathex=['D:\\Work\\pyinstaller\\buildtests'])
+pyz = PYZ(a.pure)
+exe = EXE(pyz,
+          a.scripts,
+          exclude_binaries=1,
+          name='buildtest9/test9.exe',
+          debug=False,
+          strip=False,
+          upx=False,
+          console=True )
+coll = COLLECT( exe,
+               a.binaries,
+               strip=False,
+               upx=False,
+               name='disttest9')
