@@ -13,6 +13,7 @@ Current changes since PyInstaller 1.0
  + Mimic Python 2.4 behaviour with broken imports: sys.modules is cleaned up
    afterwise. This allows to package SQLObject applications under Windows
    with Python 2.4 and above.
+ + Fix packaging of code using "time.strptime" under Python 2.3+.
  + Add import hook for GTK.
  + Add import hook for PyOpenGL.
  + Add import hook for dnspython (tested with 1.3.4)
